# OtterEngine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  pre-build.bat  shaders.vulkan.bat
Assets/Shaders/: default.frag  default.glsl.frag  default.glsl.vert  default.vert
Otter/: CMakeLists.txt
Otter.Tests/: CMakeLists.txt  EmptyTest.cpp
Otter.Tests/Core/: Function.Tests.cpp  Memory.Tests.cpp  Time.Tests.cpp
Otter.Tests/Core/Allocators/: FreeListAllocator.Tests.cpp
Otter.Tests/Core/Collections/: Array.Tests.cpp  BitArray.Tests.cpp  Collection.Tests.cpp  Deque.Tests.cpp  Dictionary.Tests.cpp  Enumerable.Tests.cpp  HashSet.Tests.cpp  List.Tests.cpp  Queue.Tests.cpp  Span.Tests.cpp  Stack.Tests.cpp  UnsafeList.Tests.cpp
Otter.Tests/Core/Collections/ReadOnly/: ReadOnlyArray.Tests.cpp  ReadOnlySpan.Tests.cpp
Otter.Tests/Core/Collections/Utils/: HashUtils.Tests.cpp
Otter.Tests/Core/Events/: EventSystem.Tests.cpp
Otter.Tests/ECS/: Archetype.Tests.cpp  ComponentData.Tests.cpp  EntityManager.Tests.cpp
Otter/includes/: Otter.PCH.h  Otter.h
Otter/includes/2D/: Sprite.h
Otter/includes/Assets/: Asset.h
Otter/includes/Components/: IComponent.h
Otter/includes/Components/Core/: CameraComponent.h  SpriteComponent.h  TransformComponent.h
Otter/includes/Core/: Application.h  Assert.h  BaseTypes.h  Collections.h  Defines.h  Delegates.h  Entity.h  EntryPoint.h  Events.h  Function.h  GlobalActions.h  Layers.h  Logger.h  Memory.h  Time.h  Types.h
Otter/includes/Core/Allocators/: AbstractAllocator.h  FreeListAllocator.h  MemoryFootprint.h
Otter/includes/Core/Collections/: Array.h  BitSet.h  Collection.h  Deque.h  Dictionary.h  Enumerable.h  HashSet.h  List.h  MultiValueDictionary.h  Queue.h  Span.h  Stack.h  UnsafeBuffer.h  UnsafeList.h
Otter/includes/Core/Collections/Iterators/: LinearIterator.h  SlotIterator.h
Otter/includes/Core/Collections/ReadOnly/: ReadOnlyArray.h  ReadOnlySpan.h
Otter/includes/Core/Collections/Utils/: HashBucket.h  HashSlot.h  HashUtils.h  KeyValuePair.h
Otter/includes/Core/Defines/: Defines.Assertions.h  Defines.Compilation.h  Defines.Logger.h  Defines.Platform.h  Defines.TypeDefinition.h  Defines.Utilities.h
Otter/includes/Core/Events/: Event.h  EventAction.h  EventCategory.h  EventSystem.h  EventType.h  KeyboardEvents.h  MouseEvents.h  WindowEvents.h
Otter/includes/Core/Input/: KeyCode.h  MouseButton.h
Otter/includes/Core/Types/: Types.Base.h  Types.Delegates.h  Types.EventCategory.h  Types.EventType.h  Types.KeyCode.h  Types.LogLevel.h  Types.MouseButton.h  Types.Operators.h
Otter/includes/ECS/: Archetype.h  Component.h  ComponentData.h  Entity.h  EntityManager.h  IComponent.h  World.h
Otter/includes/Graphics/: AbstractRenderer.h  AbstractShader.h  GraphicsSystem.h
Otter/includes/Graphics/2D/: Point.h  Sprite.h  Vertex.h
Otter/includes/Graphics/API/Vulkan/: VulkanBase.Includes.h  VulkanBuffers.h  VulkanCommands.h  VulkanDataBuffer.h  VulkanExtensions.h  VulkanPipelines.h  VulkanPoint.h  VulkanQueues.h  VulkanRenderer.h  VulkanShader.h  VulkanShaders.h  VulkanSwapchains.h  VulkanTexture.h
Otter/includes/Graphics/API/Vulkan/Types/: VulkanTypes.Buffer.h  VulkanTypes.Descriptors.h  VulkanTypes.Device.h  VulkanTypes.Point.h  VulkanTypes.Shader.h  VulkanTypes.Swapchain.h  VulkanTypes.UniformBuffers.h
Otter/includes/Graphics/Abstractions/: DataBuffer.h  Renderer.h  RendererAPI.h  Shader.h  ShaderAttribute.h  Texture.h
Otter/includes/Graphics/Common/: Types.BufferType.h  Types.GraphicsAPI.h  Types.ShaderAttributeSize.h  Types.ShaderAttributeType.h  Types.TextureDimension.h  Types.Vertex.h
Otter/includes/Graphics/Vulkan/: VulkanBase.Includes.h  VulkanBase.Internal.h  VulkanBase.Platform.h  VulkanBase.Types.h  VulkanBase.h  VulkanBuffers.h  VulkanCommands.h  VulkanContext.h  VulkanDevice.h  VulkanExtensions.h  VulkanPipelines.h  VulkanPlatform.h  VulkanQueues.h  VulkanRenderer.h  VulkanShaders.h  VulkanSurface.h  VulkanSwapchain.h  VulkanSwapchains.h
Otter/includes/Graphics/Vulkan/Types/: VulkanTypes.Buffer.h  VulkanTypes.Context.h  VulkanTypes.Descriptors.h  VulkanTypes.Device.h  VulkanTypes.Point.h  VulkanTypes.Shader.h  VulkanTypes.Swapchain.h
Otter/includes/Math/: Core.h  Math.Concepts.h  Math.Matrix2x2.h  Math.Matrix3x3.h  Math.Matrix4x4.h  Math.Quaternion.h  Math.Vector2.h  Math.Vector3.h  Math.Vector4.h  Matrix.h  Quaternion.h  Vector.h
Otter/includes/Math/Geometry/: Rectangle.h
Otter/includes/Platform/: FileSystem.h  Platform.h  PlatformLinux.h  PlatformWin32.h
Otter/includes/Platform/Linux/: Platform.Linux.h
Otter/includes/Platform/Windows/: Platform.Win32.h
Otter/includes/Renderer/Vulkan/: VulkanPlatform.h
Otter/src/Core/: Application.cpp  GlobalActions.cpp  Memory.cpp  Time.cpp
Otter/src/Core/Allocators/: FreeListAllocator.cpp
Otter/src/Core/Collections/Utils/: HashUtils.cpp
Otter/src/Core/Events/: EventSystem.cpp
Otter/src/Core/Memory/: Memory.cpp
Otter/src/ECS/: EntityManager.cpp  World.cpp
Otter/src/Graphics/: GraphicsSystem.cpp  NullGraphics.cpp
Otter/src/Graphics/API/Vulkan/: VulkanBuffers.cpp  VulkanCommands.cpp  VulkanDataBuffer.cpp  VulkanExtensions.cpp  VulkanPipelines.cpp  VulkanQueues.cpp  VulkanRenderer.cpp  VulkanShader.cpp  VulkanShaders.cpp  VulkanSwapchains.cpp  VulkanTexture.cpp
Otter/src/Graphics/Null/: NullGraphics.cpp
Otter/src/Graphics/Vulkan/: VulkanBase.Platform.cpp  VulkanBuffers.cpp  VulkanCommands.cpp  VulkanDevice.cpp  VulkanExtensions.cpp  VulkanPipelines.cpp  VulkanPlatform.Win32.cpp  VulkanQueues.cpp  VulkanRenderer.cpp  VulkanShaders.cpp  VulkanSurface.cpp  VulkanSwapchain.cpp  VulkanSwapchains.cpp
Otter/src/Platform/: FileSystem.cpp  Platform.cpp
Otter/src/Platform/Linux/: Platform.Linux.cpp  PlatformLinux.cpp
Otter/src/Platform/Windows/: Platform.Win32.cpp  PlatformWin32.cpp
Otter/src/Renderer/Vulkan/: VulkanPlatform.Win32.cpp
Sandbox/: CMakeLists.txt
Sandbox/src/: SandboxApplication.cpp
